# Intuition

./: Cargo.toml
example/: arithmetic.intu  booleans.intu  comments.intu  demo.intu  floats.intu  functions.intu  recursion.intu  simple.intu  types.intu
report/: parser.report  parser.rs
src/: compile.rs  eval.rs  main.rs  parser.lalrpop  remove_complex.rs  repl.rs  syntax.rs  typechecker.rs  uniquify.rs
