[package]
name = "intuition"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
rustyline = "17.0.2"
clap = { version = "4.6.1", features = ["derive"] }
